fixed issue with broken styles on IE mobile devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-$header-height: 64px;
+@import "constant.scss";
 
 html, body {
     font-family: 'Roboto', sans-serif;
@@ -6,14 +6,6 @@ html, body {
 
 .buka {
     display: flex;
-}
-
-.buka__header {
-    top: 0;
-    z-index: 2;
-    width: 100%;
-    height: $header-height;
-    position: fixed;
 }
 
 .buka__container {
